Implement logic for pop up for ingredient description.

--- a/app/views/sandwiches/new.html.erb
+++ b/app/views/sandwiches/new.html.erb
@@ -22,7 +22,33 @@
             <% if ingredient.image_url.present? %>
               <%= image_tag(Cloudinary::Utils.cloudinary_url(ingredient.image_url), alt: ingredient.name, width: "100", height: "100") %>
             <% end %>
+            <!-- Add popup for ingredient descriptions -->
             <%= label_tag "ingredient_#{ingredient.id}", class: "ingredient-label" do %>
+              <%= ingredient.name %>
+              <!-- Button trigger modal -->
+              <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#ingredientModal-<%= ingredient.id %>">
+                Details
+              </button>
+              <!-- Modal -->
+              <div class="modal fade" id="ingredientModal-<%= ingredient.id %>" tabindex="-1" aria-labelledby="ingredientModalLabel-<%= ingredient.id %>" aria-hidden="true">
+                <div class="modal-dialog">
+                  <div class="modal-content">
+                    <div class="modal-header">
+                      <h1 class="modal-title fs-5" id="ingredientModalLabel-<%= ingredient.id %>">
+                        <%= ingredient.name %>
+                      </h1>
+                      <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                      <p><strong>Description:</strong> <%= ingredient.description %></p>
+                    </div>
+                    <div class="modal-footer">
+                      <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                      <button type="button" class="btn btn-primary">Save changes</button>
+                    </div>
+                  </div>
+                </div>
+              </div>
               <!-- Instead of a checkbox, use a hidden field to send the ingredient ID -->
               <%= hidden_field_tag "sandwich[ingredient_ids][]", ingredient.id, value: ingredient.id %>
               <span class="ingredient-name"><%= ingredient.name %></span>
@@ -58,6 +84,7 @@
             <% if ingredient.image_url.present? %>
               <%= image_tag(Cloudinary::Utils.cloudinary_url(ingredient.image_url), alt: ingredient.name, width: "100", height: "100") %>
             <% end %>
+            <!-- Add popup for ingredient descriptions -->
             <%= label_tag "ingredient_#{ingredient.id}", class: "ingredient-label" do %>
               <!-- Instead of a checkbox, use a hidden field to send the ingredient ID -->
               <%= hidden_field_tag "sandwich[ingredient_ids][]", ingredient.id, value: ingredient.id %>
