--- a/app/views/sandwiches/new.html.erb
+++ b/app/views/sandwiches/new.html.erb
@@ -82,6 +82,28 @@
             <% end %>
             <!-- Add popup for ingredient descriptions -->
             <%= label_tag "ingredient_#{ingredient.id}", class: "ingredient-label" do %>
+              <span
+              class="ingredient-name"
+              data-bs-toggle="modal"
+              data-bs-target="#ingredientModal-<%= ingredient.id %>">
+                <%= ingredient.name %>
+              </span>
+              <!-- Modal -->
+              <div class="modal fade" id="ingredientModal-<%= ingredient.id %>" tabindex="-1" aria-labelledby="ingredientModalLabel-<%= ingredient.id %>" aria-hidden="true">
+                <div class="modal-dialog">
+                  <div class="modal-content">
+                    <div class="modal-header">
+                      <h1 class="modal-title fs-5" id="ingredientModalLabel-<%= ingredient.id %>">
+                        <%= ingredient.name %>
+                      </h1>
+                      <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                      <p><strong>Description:</strong> <%= ingredient.description %></p>
+                    </div>
+                  </div>
+                </div>
+              </div>
               <!-- Instead of a checkbox, use a hidden field to send the ingredient ID -->
               <%= hidden_field_tag "sandwich[ingredient_ids][]", ingredient.id, value: ingredient.id %>
               <div>
