Added a pop-up modal for the AI function which only works on the new page.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -18,4 +18,5 @@
 @import "pages/sandwiches_new";
 @import "pages/landing";
 @import "pages/bottom_footer";
-@import "pages/user_show"
+@import "pages/user_show";
+@import "pages/ai_modal"
