--- a/app/views/sandwiches/index.html.erb
+++ b/app/views/sandwiches/index.html.erb
@@ -9,9 +9,7 @@
               <i class="fa-solid fa-magnifying-glass search-icons"></i>
             </button>
           </div>
-
           <input type="text" class="form-control search-input" placeholder="Search for sandwiches" data-action="keyup->search#fire" data-search-target="input" />
-
           <div class="input-group-append">
             <button class="btn" type="button"
                     data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false" data-turbo="false">
@@ -34,4 +32,4 @@
     </div>
   </div>
   <%# toggle_favorite_sandwich_path %>
-</body>
+</div>
