--- a/app/assets/stylesheets/pages/_user_show.scss
+++ b/app/assets/stylesheets/pages/_user_show.scss
@@ -115,11 +115,20 @@
 }
 
 .trophy-case {
-  // display: flex;
-  // justify-content: space-between;
-  // align-items: flex-start;
-  // gap: 10px;
-  // text-align: center;
-  // flex-wrap: wrap;
-  // flex-direction: row;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.trophy-header {
+  border: 2px solid #FFBF00;
+  box-shadow: inset 0 0 10px #FFBF00, inset 0 0 10px #FFBF00;
+  text-align: center;
+  padding: 5px;
+}
+
+.trophy-header h1 {
+  font-size: 30px;
+  font-family: "chakra petch", sans-serif;
 }
