review styling done

--- a/app/views/sandwiches/show.html.erb
+++ b/app/views/sandwiches/show.html.erb
@@ -132,10 +132,10 @@
 
 <!-- Template for a Review -->
 <template id="review-template">
-  <div class="review-item p-2 border-bottom" data-review-id="">
+  <div class="review-item p-2" data-review-id="">
     <div class="d-flex justify-content-between">
       <div>
-        <strong>User:</strong> <span class="review-username"></span>
+        <strong class="user-text">User:</strong> <span class="review-username"></span>
       </div>
       <div>
         <span class="stars"></span>
