--- a/app/views/sandwiches/show.html.erb
+++ b/app/views/sandwiches/show.html.erb
@@ -141,7 +141,7 @@
       <div>
         <strong class="user-text">User:</strong> <span class="review-username"></span>
       </div>
-      <div>
+      <div class="icon-container">
         <span class="stars"></span>
         <span class="craziness"></span>
       </div>
