--- a/app/assets/stylesheets/pages/_user_show.scss
+++ b/app/assets/stylesheets/pages/_user_show.scss
@@ -3,7 +3,7 @@
   color: rgb(255, 191, 0);
   // border-radius: 8px;
   // padding: 20px;
-  max-height: 90vh;
+  // max-height: 90vh;
   width: 100%;
   overflow-y: auto;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
@@ -135,6 +135,7 @@
   justify-content: center;
   gap: 10px;
   overflow-y: scroll;
+  padding-bottom: 82px;
   // max-height: 350px; /* Ensure that the trophies are scrollable */
 }
 
