--- a/app/assets/stylesheets/pages/_sandwiches_index.scss
+++ b/app/assets/stylesheets/pages/_sandwiches_index.scss
@@ -33,16 +33,27 @@ body {
   align-items: center;
   gap: 10px; /* Space between image and text */
   padding: 10px;
-  background: #fff;
+  // background: #fff;
+  background-image: url("/assets/bg_card_index.png");
+  background-size: 100% 100%;
   border-radius: 8px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
-.sandwiches.index .sandwich-image {
-  width: 33vw; /* 33% of the viewport width */
-  height: auto; /* Maintain aspect ratio */
+.sandwiches.index .sandwich-image-box {
+  width: 36vw;
+  height: 30vw;
   object-fit: cover;
   border-radius: 8px;
+  margin-left: 27px;
+}
+
+.sandwiches.index .sandwich-image {
+  max-width: 100%;
+  max-height: 100%;
+  height: auto;
+  width: auto;
+  object-fit: contain;
 }
 
 .sandwiches.index .sandwich-content {
@@ -106,4 +117,8 @@ padding-bottom: 37px;
 
 .search-container {
   border-radius: 50px;
+}
+
+#search-results {
+  width: 100%;
 }
