--- a/app/assets/stylesheets/pages/_sandwiches_index.scss
+++ b/app/assets/stylesheets/pages/_sandwiches_index.scss
@@ -75,6 +75,18 @@ body {
 #sandwiches-container {
   transition: opacity 0.4s ease-in-out;
 }
+
+.sandwich-user {
+  font-size: 17px;
+  font-weight: 700;
+  margin-bottom: -2px;
+}
+
+.sandwich-card-title {
+  font-size: 27px;
+  font-weight: 900;
+}
+
 .loading {
   opacity: 0.5;
 }
