moved favorite button

--- a/app/views/sandwiches/_like_button.html.erb
+++ b/app/views/sandwiches/_like_button.html.erb
@@ -1,4 +1,4 @@
-<div class="favorite-button mx-2" data-controller="favorite" data-favorite-id="<%= sandwich.id %>" data-favorite-state="<%= current_user.favorited?(sandwich) %>" data-action="click->favorite#toggle">
+<div class="favorite-button" data-controller="favorite" data-favorite-id="<%= sandwich.id %>" data-favorite-state="<%= current_user.favorited?(sandwich) %>" data-action="click->favorite#toggle">
   <% if sandwich.favorited_by?(current_user) %>
     <i class="fa-solid fa-heart text-danger"></i> <!-- Solid red heart -->
   <% else %>
