--- a/app/views/sandwiches/index.html.erb
+++ b/app/views/sandwiches/index.html.erb
@@ -1,5 +1,5 @@
 <body class="sandwiches index">
-  <div data-controller="search favorite-toggle" data-favorite-toggle-favorites="<%= current_user.favorited_by_type('Sandwich').map(&:id).to_json %>" class="container">
+  <div data-controller="search favorite-toggle" data-favorite-toggle-favorites="<%= current_user.favorited_by_type('Sandwich').map(&:id).to_json %>" class="toggle-container">
     <!-- Search Bar -->
     <div class="row search-top">
       <div class="col-12 d-flex justify-content-between align-items-center">
