--- a/app/assets/stylesheets/pages/_favorites.scss
+++ b/app/assets/stylesheets/pages/_favorites.scss
@@ -3,6 +3,7 @@
   background: none;
   font-size: 24px;
   transition: transform 0.2s ease-in-out;
+  align-self: end;
 }
 
 .favorite-button:hover {
