--- a/app/assets/stylesheets/pages/_sandwiches_index.scss
+++ b/app/assets/stylesheets/pages/_sandwiches_index.scss
@@ -30,14 +30,15 @@ body {
 
 .sandwiches.index .sandwich-card {
   display: flex;
-  align-items: center;
-  gap: 10px; /* Space between image and text */
+  align-items: flex-start;
+  // gap: 10px;
   padding: 10px;
   // background: #fff;
   background-image: url("/assets/bg_card_index.png");
   background-size: 100% 100%;
   border-radius: 8px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  flex-direction: column;
 }
 
 .sandwiches.index .sandwich-image-box {
@@ -61,6 +62,8 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  padding: 20px;
+  align-self: center;
 }
 
 .sandwiches.index .sandwich-text {
@@ -69,7 +72,7 @@ body {
 }
 
 .sandwiches.index .favorite-button {
-  align-self: start;
+  align-self: end;
 }
 
 #sandwiches-container {
@@ -87,6 +90,11 @@ body {
   font-weight: 900;
 }
 
+.sandwich-card-content {
+  display: flex;
+  flex-direction: row;
+}
+
 .loading {
   opacity: 0.5;
 }
@@ -98,7 +106,8 @@ body {
   z-index: 1000;
   background-image: url("/assets/top_bar_generic.png");
   background-position: center;
-  padding: 20px 0;
+  padding: 20px 10px;
+  background-size: 102%;
 }
 
 #search-results {
@@ -132,5 +141,9 @@ padding-bottom: 37px;
 }
 
 #search-results {
+  width: 100%;
+}
+
+.toggle-container {
   width: 100%;
 }
