--- a/app/views/shared/_bottom_navbar.html.erb
+++ b/app/views/shared/_bottom_navbar.html.erb
@@ -30,7 +30,7 @@
         </button>
         <div class="dropdown-menu dropdown-menu-end" data-popup_menu-target="menu">
           <%= link_to "My Profile", current_user, class: "dropdown-item" %>
-          <%= link_to "Action", "#", class: "dropdown-item" %>
+          <%#= link_to "Action", "#", class: "dropdown-item" %>
           <%= link_to "Log out", destroy_user_session_path, data: {turbo_method: :delete}, class: "dropdown-item" %>
         </div>
       </li>
