--- a/app/views/shared/_sandwichist_ai.html.erb
+++ b/app/views/shared/_sandwichist_ai.html.erb
@@ -9,16 +9,20 @@
         <form>
           <!-- Num of Ingredients -->
           <div data-mdb-input-init class="form-outline mb-4">
-            <label for="ai_quantity">Add <em id="rangeValLabel" style="font-style: normal;">1</em> ingredients:</label>
-            <input type="range" id="ai_quantity" oninput="document.getElementById('rangeValLabel').innerHTML = this.value;" name="ai_quantity" min="1" max="10" value="1">
+            <label for="aiQuantity">Add <em id="rangeValLabel" style="font-style: normal;">1</em> ingredients:</label>
+            <input type="range" id="aiQuantity" data-sandwichist-ai-target="aiQuantity" oninput="document.getElementById('rangeValLabel').innerHTML = this.value;" name="ai_quantity" min="1" max="10" value="1">
           </div>
           <!-- Inspiration Word -->
           <div data-mdb-input-init class="form-outline mb-4">
             <label for="keyword">Give the sandwichist a theme:</label>
-            <input type="text" id="keyword" class="form-control" placeholder="Lasagna, Portugal, Mickey Mouse, etc..." />
+            <input type="text" id="keyword" class="form-control" data-sandwichist-ai-target="keyword" placeholder="Lasagna, Portugal, Mickey Mouse, etc..." />
+          </div>
+          <div class="form-group">
+            <label for="responseBox">How about trying:</label>
+            <textarea class="form-control" id="responseBox" data-sandwichist-ai-target="responseBox" rows="5" placeholder="Waiting for your command..." readonly></textarea>
           </div>
           <!-- Submit button -->
-          <button type="submit" data-mdb-button-init data-mdb-ripple-init class="btn btn-primary btn-block">Get Crazy!</button>
+          <button data-action="click->sandwichist-ai#generate" class="run-ai-button"> "Get Crazy!"</button>
         </form>
       </div>
     </div>
