--- a/app/assets/stylesheets/pages/_sandwiches.scss
+++ b/app/assets/stylesheets/pages/_sandwiches.scss
@@ -4,19 +4,35 @@
   }
 
   .card {
-    margin: 10px 15px;
-    border-radius: 12px;
-    padding: 20px;
+    background: transparent;
+  }
+
+  .sandwich-card:nth-of-type(-n+2) {
+    background: asset_url("bg_paper.png");
+    background-size: 100% 380px;
+  }
+
+  .sandwich-card.tasting-notes-card {
+    .inner-box-tasting-notes {
+      border: 2px solid black;
+      border-radius: 10px;
+      padding: 10px 0px;
+      width: 380px;
+      max-width: 100%;
+      margin: 0 auto;
+    }
   }
 
   .sandwich-image {
-    width: 100%;
-    height: auto;
+    width: 90%;
+    height: 300px;
     border-top-left-radius: 15px;
     border-top-right-radius: 15px;
     border-bottom-left-radius: 0;
     border-bottom-right-radius: 0;
     object-fit: cover;
+    align-items: center;
+    margin-left: 20px;
   }
 
   .sandwich-title {
@@ -24,6 +40,7 @@
     font-weight: bold;
     margin-top: 10px;
     text-align: left;
+    margin-left: 10px;
   }
 
   .category-container {
@@ -73,6 +90,7 @@
     font-size: 1rem;
     line-height: 1.5;
     margin-top: 10px;
+    margin-left: 10px;
   }
 
   .notes-header {
@@ -358,6 +376,7 @@
   background-color: transparent;
   border-top: 3px solid #86613d;
   border-radius: 0px;
+  margin: 10px 15px;
 
   h2 {
     font-size: 1.5rem;
