--- a/app/views/sandwiches/show.html.erb
+++ b/app/views/sandwiches/show.html.erb
@@ -1,5 +1,5 @@
 <div class="sandwich-show-page">
-  <div class="card p-3 mb-3 sandwich-card">
+  <div class="card p-3 sandwich-card">
     <% if @sandwich.photo.attached? %>
       <%= cl_image_tag @sandwich.photo.key, alt: 'Burger Image', class: 'img-fluid sandwich-image' %>
     <% else %>
@@ -24,53 +24,44 @@
     <p class="description"><%= @sandwich.description %></p>
   </div>
 
-  <div class="card p-3 mb-3 sandwich-card">
-    <h2 class="notes-header">Tasting Notes</h2>
-    <div class="d-flex justify-content-between text-center category-container">
-      <div class="category flavor">
-        <h2>Flavor</h2>
-
-        <canvas
-  data-controller="chartjs"
-  data-chartjs-data-value="<%= @chart_data.to_json %>"
-  data-chartjs-options-value="<%= @chart_options.to_json %>"
-  data-chartjs-type-value="radar"
-></canvas>
-
-        <div class="flavors-list">
-          <% if @flavors.uniq.any? %>
-            <% @flavors.uniq.each do |flavor| %>
-              <span class="flavor-box flavor-<%= flavor.downcase.gsub(' ', '-') %>"><%= flavor %></span>
-            <% end %>
-          <% else %>
-            <p>None</p>
-          <% end %>
+  <div class="card p-3 mb-3 sandwich-card tasting-notes-card">
+    <div class="inner-box-tasting-notes">
+      <h2 class="notes-header">Tasting Notes</h2>
+      <div class="d-flex justify-content-between text-center category-container">
+        <div class="category flavor">
+          <h2>Flavor</h2>
+          <canvas
+            data-controller="chartjs"
+            data-chartjs-data-value="<%= @chart_data.to_json %>"
+            data-chartjs-options-value="<%= @chart_options.to_json %>"
+            data-chartjs-type-value="radar"
+          ></canvas>
         </div>
-      </div>
 
-      <div class="category texture">
-        <h2>Texture</h2>
-        <div class="textures-list <%= 'single-item' if @textures.uniq.size == 1 %>">
-          <% if @textures.uniq.any? %>
-            <% @textures.uniq.each do |texture| %>
-              <span class="texture-box texture-<%= texture.downcase.gsub(' ', '-') %>"><%= texture %></span>
+        <div class="category texture">
+          <h2>Texture</h2>
+          <div class="textures-list <%= 'single-item' if @textures.uniq.size == 1 %>">
+            <% if @textures.uniq.any? %>
+              <% @textures.uniq.each do |texture| %>
+                <span class="texture-box texture-<%= texture.downcase.gsub(' ', '-') %>"><%= texture %></span>
+              <% end %>
+            <% else %>
+              <p>None</p>
             <% end %>
-          <% else %>
-            <p>None</p>
-          <% end %>
+          </div>
         </div>
-      </div>
 
-      <div class="category cuisine">
-        <h2>Cuisine</h2>
-        <div class="cuisine-list <%= 'single-item' if @cuisines.uniq.size == 1 %>">
-          <% if @cuisines.uniq.any? %>
-            <% @cuisines.uniq.each do |cuisine| %>
-              <%= render 'shared/flag_icon', country: cuisine %>
+        <div class="category cuisine">
+          <h2>Cuisine</h2>
+          <div class="cuisine-list <%= 'single-item' if @cuisines.uniq.size == 1 %>">
+            <% if @cuisines.uniq.any? %>
+              <% @cuisines.uniq.each do |cuisine| %>
+                <%= render 'shared/flag_icon', country: cuisine %>
+              <% end %>
+            <% else %>
+              <%= render 'shared/flag_icon', country: 'pirate' %>
             <% end %>
-          <% else %>
-            <%= render 'shared/flag_icon', country: 'pirate' %>
-          <% end %>
+          </div>
         </div>
       </div>
     </div>
