--- a/app/assets/stylesheets/pages/_sandwiches_new.scss
+++ b/app/assets/stylesheets/pages/_sandwiches_new.scss
@@ -10,7 +10,8 @@
   padding: 20px;
   //max-height: 82vh;
   width: 100%;
-  //overflow-y: auto;
+  overflow-y: scroll;
+  height: 800px;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
 }
 
