--- a/app/assets/stylesheets/pages/_bottom_footer.scss
+++ b/app/assets/stylesheets/pages/_bottom_footer.scss
@@ -27,12 +27,13 @@
       display: flex;
       align-items: center;
       justify-content: center;
-      background-color: #8a2be2;
+      background-color: rgb(255, 191, 0);
+      border: 2px solid black;
       border-radius: 50%;
       width: 50px;
       height: 50px;
       font-size: 24px;
-      color: white;
+      color: rgb(0, 0, 0);
       padding: 0;
 
       i {
@@ -46,7 +47,8 @@
     }
 
     .create-sandwich-btn {
-      background-color: #8a2be2;
+      background-color: rgb(255, 191, 0);
+      border: 2px solid black;
       width: 70px;
       height: 70px;
       margin-top: -10px;
