--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -29,14 +29,16 @@
       <% @allbadges.each do |badge| %>
         <div class="trophy-box <%= "earned" if current_user.has_badge?(badge.name) %>">
           <div class="trophy-container">
-            <%= image_tag "trophy-icon", alt: badge.name, class: "trophy-image" %>
+            <img src=<%= asset_path("trophy-icon") %> alt: badge.name, class="trophy-image">
           </div>
           <div class="trophy-info">
             <div class="trophy-name"><%= badge.name %></div>
             <div class="trophy-requirements"><%= badge.description %></div>
           </div>
           <div class="check-container">
-            <%= image_tag "check", alt: "Earned", class: "checkmark" if current_user.has_badge?(badge.name) %>
+            <% if current_user.has_badge?(badge.name) %>
+              <img src="<%= asset_path('check') %>" alt="Earned" class="checkmark" />
+            <% end %>
           </div>
         </div>
       <% end %>
