--- a/app/assets/stylesheets/pages/_sandwiches_index.scss
+++ b/app/assets/stylesheets/pages/_sandwiches_index.scss
@@ -149,3 +149,13 @@ body {
 .toggle-container {
   width: 100%;
 }
+
+.sandwiches.index .dropdown-menu {
+  background: black;
+  color: #FFBF00;
+}
+
+.sandwiches.index .dropdown-menu a {
+  background: black;
+  color: #FFBF00;
+}
