Fix heroku problem

--- a/app/assets/stylesheets/pages/_sandwiches_index.scss
+++ b/app/assets/stylesheets/pages/_sandwiches_index.scss
@@ -34,7 +34,7 @@ body {
   // gap: 10px;
   padding: 10px;
   // background: #fff;
-  background-image: asset_url("bg_card_index.png");
+  background-image: url("https://res.cloudinary.com/dadymzua9/image/upload/v1699999999/bg_card_index_fpggpf");
   background-size: 100% 100%;
   border-radius: 8px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
