--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,8 +1,8 @@
 <div class="profile-background d-flex justify-content-center align-items-center flex-column">
   <div class="profile-header">
-    <img src=<%= asset_path("top-bar-profile") %> alt="No Restrictions Applied" class="profile-header-image">
+    <img src=<%= asset_path("top-bar-profile.png") %> alt="No Restrictions Applied" class="profile-header-image">
     <%# <div class="inner-banner"> %>
-      <%# <h1>User Show Page</h1> %>
+    <%# <h1>User Show Page</h1> %>
     <%# </div> %>
   </div>
   <div class="license-card">
@@ -11,12 +11,13 @@
     </div>
     <div class="diet-name d-flex flex-row">
       <div class="dietary">
-        <img src=<%= asset_path("dietary-stamp") %> alt="No Restrictions Applied" class="restriction-image">
+        <img src=<%= asset_path("dietary-stamp.png") %> alt="No Restrictions Applied" class="restriction-image">
       </div>
       <div class="name-field">
         <span class="label">Name</span>
         <span class="user-name"><%= @user.username.present? ? @user.username : @user.email %></span>
-      </div>    </div>
+      </div>
+    </div>
     <div class="allergy-list">
       <p>I have allergies!</p>
     </div>
@@ -29,7 +30,7 @@
       <% @allbadges.each do |badge| %>
         <div class="trophy-box <%= "earned" if current_user.has_badge?(badge.name) %>">
           <div class="trophy-container">
-            <img src=<%= asset_path("trophy-icon") %> alt: badge.name, class="trophy-image">
+            <img src=<%= asset_path("trophy-icon.png") %> alt: badge.name, class="trophy-image">
           </div>
           <div class="trophy-info">
             <div class="trophy-name"><%= badge.name %></div>
@@ -37,7 +38,7 @@
           </div>
           <div class="check-container">
             <% if current_user.has_badge?(badge.name) %>
-              <img src="<%= asset_path('check') %>" alt="Earned" class="checkmark" />
+              <img src="<%= asset_path('check.png') %>" alt="Earned" class="checkmark" />
             <% end %>
           </div>
         </div>
