--- a/app/views/shared/_bottom_navbar.html.erb
+++ b/app/views/shared/_bottom_navbar.html.erb
@@ -11,27 +11,25 @@
       </li>
       <!-- Button 2 -->
       <li class="nav-item w-20 text-center">
-        <a class="nav-link btn recipe-btn" href="#">
-          <i class="fas fa-book"></i>
-        </a>
-      </li>
-      <!-- Center Big Button -->
-      <li class="nav-item w-20 text-center">
         <%= link_to new_sandwich_path, class: "nav-link btn create-sandwich-btn" do %>
           <i class="fas fa-plus"></i>
         <% end %>
       </li>
-      <!-- Button 4 -->
+      <!-- Center Big Button -->
       <li class="nav-item w-20 text-center">
         <% if params[:action] == "new"%>
-          <button class="nav-link btn help-btn" data-bs-toggle="modal" data-bs-target="#aiModal">
-            <i class="fa fa-android"></i>
+          <button class="nav-link btn ai-active-btn" data-bs-toggle="modal" data-bs-target="#aiModal">
           </button>
         <%else%>
-          <button class="nav-link btn help-btn" href="#">
-            <i class="fa fa-ban"></i>
+          <button class="nav-link btn ai-inactive-btn" href="#">
           </button>
         <%end%>
+      </li>
+      <!-- Button 4 -->
+      <li class="nav-item w-20 text-center">
+        <a class="nav-link btn recipe-btn" href="#">
+          <i class="fas fa-calendar"></i>
+        </a>
       </li>
       <!-- Profile Button -->
       <li class="nav-item w-20 text-center" data-controller="popup_menu">
