--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -20,6 +20,7 @@
     </div>
     <div class="allergy-list">
       <p>I have allergies!</p>
+      <img src=<%= asset_path("icon_allergy_shrimp_bk.png")%> alt="Allergy Icon" class="allergy-icon" style="width: 2rem;">
     </div>
   </div>
   <div class="trophy-case">
